@@ -1,5 +1,10 @@
 dpkg (1.14.26) UNRELEASED; urgency=low
 
+  [ Raphael Hertzog ]
+  * Fix dpkg-source to not die when uncompressor processes are killed by
+    SIGPIPE due to tar closing the pipe without exhausting all the data
+    available. Closes: #523329
+
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
   * Polish (Wiktor Wandachowicz). Closes: #514106
