@@ -1,3 +1,11 @@
+2009-04-09  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/CompressedFile.pm (cleanup_after_open): Do
+	not die when uncompressors processes (gunzip, bunzip, etc.) are
+	killed by SIGPIPE.
+	* scripts/Dpkg/Source/Compressor.pm (wait_end_process): Modified
+	so that it can forward options to Dpkg::IPC::wait_child().
+
 2009-02-03  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.26~.
